Wk3_PP_index.html

--- a/Week-4/Wk3_PP_index.html
+++ b/Week-4/Wk3_PP_index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 
 <head>
-    <title>HTML5 Semantics</title>
+    <title>Get ready for a new new generation of chip</title>
 </head>
 
 <body>
-    <div>
-        <h1>Header</h1>
-    </div>
-    <div>
-        <p>Navbar</p>   <!-- Remove the <p> and add links -->
-    </div>
-    <div>
-        <h2>Main Section</h2>
+    <link rel="stylesheet" href="styles.css"/>
+    <header>
+        <h1 style="color:blue;"> The Apple M1 Chip</h1>
+    </header>
+    <nav>
+        <a href="https://www.tomshardware.com/news/Apple-M1-Chip-Everything-We-Know"></a>
+    </nav>
+    <main>
+        <h2>How does it Compare?</h2>
         <div>
-            <h3>Article</h3>
+            <h3>With Apple's new release of there 5nm chip, on the ARM architexture they have been getting praised for its preformance and battery, but how does it compare in numbers to the compitition the AMD 7nm chips with a 1 node disadvantage absolutely decimate the Apple 5nm chip. Even Intel's 14nm processor gets more or less the same score and the 10nm variant (with half the cores!) clocks in at just under 1000 points compared to the Apple M1. The Intel TGL 10nm 8 core variant is expected to land in a few months and it is expected to quickly climb to the top of this chart as well judging from the four-core results shown here.  Let's look at the results now:
+
+            </h3>
         </div>
         <div>
-            <h3>Aside</h3>
+            <h3>Cinebench Scores</h3>
         </div>
-    </div>
-    <div>
-        <h3>Footer</h3>
+        <table>
+            <tr>
+                <th>Cores</th>
+                <th>Apple M1</th>
+                <th>Intel 11th gen</th>
+                <th>AMD 4000 series</th>
+            </tr>
+            <tr>
+                <td>Single</td>
+                <td>1498</td>
+                <td>1538</td>
+                <td>1284</td>
+            </tr>
+            <tr>
+                <td>Multi</td>
+                <td>7508</td>
+                <td>7455</td>
+                <td>11061</td>
+            </tr>
+        </table>
+    </main>
+    <footer>
+        <h3>As you can see it stacks up to the compitition. With this being Apple's first computer chip, and using the 5nm process. There is nowhere to go but up. If I had to guess. You will be seeing Apple's chip rises the ranks soon.</h3>
         <p>&copy; 2019 Webdev Student</p>
-    </div>
+    </footer>
 </body>
 
 </html>
