--- a/Week-3/Wk3_PP_index.html
+++ b/Week-3/Wk3_PP_index.html
@@ -7,7 +7,7 @@
 <body>
     <link rel="stylesheet" href="styles.css"/>
     <header>
-        <h1 style="color:blue;"> The Apple M1 Chip</h1>
+        <h1> The Apple M1 Chip</h1>
     </header>
     <nav>
         <a href="https://www.tomshardware.com/news/Apple-M1-Chip-Everything-We-Know"></a>
@@ -45,7 +45,8 @@
     </main>
     <footer>
         <h3>As you can see it stacks up to the compitition. With this being Apple's first computer chip, and using the 5nm process. There is nowhere to go but up. If I had to guess. You will be seeing Apple's chip rises the ranks soon.</h3>
-        <p>&copy; 2019 Webdev Student</p>
+        <a href="index.html">Click here to support our sponsers</a>
+        <p> 2019 Webdev Student</p>
     </footer>
 </body>
 
